--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,3 +1,17 @@
 .btn {
   color: red;
 }
+
+.pin {
+  animation: pin 2s infinite linear;
+}
+
+@keyframes pin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
